--- a/.htaccess
+++ b/.htaccess
@@ -8,10 +8,10 @@
 Header set X-Robots-Tag none
 
 # -----------------------------------------------------------------------
-# Caching for 90 days - static images (unlikely to change)
+# Caching for 90 days - static images (versioned)
 # -----------------------------------------------------------------------
 <FilesMatch "\.(jpg|png|gif)$">
-Header set Cache-Control "max-age=7776000, public"
+Header set Cache-Control "max-age=31104000, public"
 </FilesMatch>
 
 # -----------------------------------------------------------------------
