--- a/.htaccess
+++ b/.htaccess
@@ -10,7 +10,7 @@ Header set X-Robots-Tag none
 # -----------------------------------------------------------------------
 # Caching for 360 days - static images (versioned)
 # -----------------------------------------------------------------------
-<FilesMatch "\.(jpg|png|gif)$">
+<FilesMatch "\.(jpg|png|gif|svg)$">
 Header set Cache-Control "max-age=31104000, public"
 </FilesMatch>
 
